syntax = "proto3";

package api.deal.v1;

option go_package = "kay/api/deal/v1;v1";
option java_multiple_files = true;
option java_package = "api.deal.v1";

import "common.proto";

service Deal {
    rpc CreateDeal (CreateDealRequest) returns (CreateDealReply);
    rpc GetDeal (GetDealRequest) returns (GetDealReply);
}

message DealDTO {
    int64 deal_id = 1;
    int64 sku_id = 2;
    int64 product_id = 3;
    string product_name = 4;
    int64 uid = 5;
    string custom_name = 6;
    string phone = 7;
    int32 price = 8;
}

message CreateDealRequest {
    RequestHeader header = 1;
    message Body {
        DealDTO deal = 1;
    }
    Body body = 2;
}

message CreateDealReply {
    ResponseHeader header = 1;
}

message GetDealRequest {
    RequestHeader header = 1;
    message Body {
        int64 deal_id = 1;
    }
    Body body = 2;
}

message GetDealReply {
    ResponseHeader header = 1;
    message Body {
        DealDTO deal = 1;
    }
    Body body = 2;
}